feat: websocket r/w logic is clean
